test/parse/assert/bad-assert-return-arithmetic-nan-too-many.txt
;;; TOOL: wast2json
;;; ERROR: 1
(module
  (func $foo (result f32) 
    f32.const 0)
  (export "foo" (func $foo)))
(assert_return_arithmetic_nan (invoke "foo" (f32.const 0)))
(;; STDERR ;;;
out/test/parse/assert/bad-assert-return-arithmetic-nan-too-many.txt:7:32: error: too many parameters to function. got 1, expected 0
(assert_return_arithmetic_nan (invoke "foo" (f32.const 0)))
                               ^^^^^^
;;; STDERR ;;)
